--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/sound": "^2.0.1",
+    "aos": "^2.3.4",
     "click-outside-vue3": "^4.0.1",
     "moment": "^2.29.4",
     "pinia": "^2.0.32",
