--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.2.2",
     "nuxt-icon": "^0.3.2",
@@ -26,8 +27,6 @@
     "aos": "^2.3.4",
     "click-outside-vue3": "^4.0.1",
     "moment": "^2.29.4",
-    "pinia": "^2.0.32",
-    "pinia-plugin-persistedstate": "^3.1.0",
     "vue-loading-overlay": "6.0",
     "vue-sweetalert2": "^5.0.5"
   }
