--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "autoprefixer": "^10.4.13",
+    "consola": "^3.1.0",
     "nuxt": "^3.2.2",
     "nuxt-icon": "^0.3.2",
     "postcss": "^8.4.21",
@@ -27,7 +28,9 @@
     "aos": "^2.3.4",
     "click-outside-vue3": "^4.0.1",
     "moment": "^2.29.4",
+    "pinia": "^2.1.3",
     "vue-loading-overlay": "6.0",
-    "vue-sweetalert2": "^5.0.5"
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-popper": "^1.5.0"
   }
 }
