--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@kyvg/vue3-notification": "^2.9.0",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.7",
+    "@productdevbook/chatwoot": "^1.5.0",
     "@vueform/multiselect": "^2.5.8",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
